# moraqwec

./: .gitignore  .vercelignore  Anchor.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  vercel.json
cli/: mora-qvac.ts  mora.ts
programs/mora/: Cargo.toml
programs/mora/src/: lib.rs
tests/: mora.ts
web/: index.html  mora.json  styles.css
