[package]
name = "mora"
version = "0.1.0"
description = "Mora — minimal escrow + voucher settlement for Solana Mobile"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mora"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "1.0.1"
solana-instructions-sysvar = "=3.0.0"
solana-sdk-ids = "=3.1.0"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("anchor-debug", "custom-heap", "custom-panic"))'] }
